# rest-task

project/: README.md  docker-compose.yml  pyproject.toml
project/apps/gifting/: models.py  serializers.py  urls.py  views.py
project/apps/monitoring/: urls.py
project/automation/: engine.py  watchdog.py
project/config/: settings.py  urls.py
project/cv/: detector.py
project/docker/: Dockerfile  nginx.conf
project/docs/: scaling.md
project/infrastructure/systemd/: telegram.service  xvfb.service
project/monitoring/prometheus/: prometheus.yml
project/tests/: test_recovery.py
project/workers/: celery_app.py  tasks.py
